feat(test): did some updates to check workflow
Signed-off-by: Arnabdaz <96580571+Arnabdaz@users.noreply.github.com>

--- a/.github/workflows/update_submodule.yml
+++ b/.github/workflows/update_submodule.yml
@@ -31,7 +31,7 @@ jobs:
 
       - name: Update Submodules
         run: |
-          git config --file=.gitmodules submodule.cv-frontend-vue.branch main
+          git config --file=.gitmodules submodule.cv-frontend-vue.branch GSoCweek1VueSimIntegration
           git submodule update --init --remote cv-frontend-vue
 
       - name: Check if Submodule Updated
