--- a/.github/workflows/update_submodule.yml
+++ b/.github/workflows/update_submodule.yml
@@ -67,8 +67,8 @@ jobs:
       - name: Commit and Push
         if: steps.check_submodule.outputs.submodule_updated == 'true'
         run: |
-          git config --global user.name 'Github Actions'
-          git config --global user.email 'actions@github.com'
+          git config --global user.name 'Arnabdaz'
+          git config --global user.email 'arnab-das@outlook.com'
           git add .
           git reset .gitignore
           git commit -m "Updated Submodule" || exit 0
