--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,4 @@
 	path = cv-frontend-vue
 	url = https://github.com/Arnabdaz/cv-frontend-vue.git
 	branc = GSoCweek1VueSimIntegration
+	branch = GSoCweek1VueSimIntegration
