--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,4 @@
 [submodule "cv-frontend-vue"]
 	path = cv-frontend-vue
-	url = https://github.com/CircuitVerse/cv-frontend-vue.git
+	url = https://github.com/Arnabdaz/cv-frontend-vue.git
+	branch = GSoCweek1VueSimIntegration
